--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.lzy.net:okhttputils:+'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
